# rawi

./: README.md  build-linux.sh  build-windows.ps1  index.html
docs/superpowers/plans/: 2026-04-25-rawi-clipboard-restore.md
docs/superpowers/specs/: 2026-04-25-rawi-clipboard-restore-design.md
src-tauri/: Cargo.toml
src-tauri/src/: audio.rs  paste.rs  settings.rs
