[package]
name = "rawi"
version = "0.2.0"
description = "A dictation app powered by Whisper"
authors = ["you"]
edition = "2021"

[lib]
name = "rawi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = { version = "0.2", features = ["x11"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = { version = "3", features = ["wayland-data-control"] }
futures-util = "0.3"
tauri-plugin-autostart = "2"
